--- a/git/index.html
+++ b/git/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     
+    <h1>Lorem ipsum dolor sit.</h1>
+    <h3>Lorem ipsum dolor sit.</h3>
+    <h1>Lorem ipsum dolor sit.</h1>
 <!-- 
     navbatda turish
     git add .
