--- a/git/index.html
+++ b/git/index.html
@@ -11,7 +11,9 @@
     <h1>Lorem ipsum dolor sit.</h1>
     <h3>Lorem ipsum dolor sit.</h3>
     <h1>Lorem ipsum dolor sit.</h1>
-<!-- 
+    <h6>Lorem ipsum dolor sit.</h6>
+<b>nimadur</b>
+    <!-- 
     navbatda turish
     git add .
     git add --a
