--- a/git/index.html
+++ b/git/index.html
@@ -7,18 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>Lorem ipsum dolor sit.</h1>
-    <h3>Lorem ipsum dolor sit.</h3>
-    <h1>Lorem ipsum dolor sit.</h1>
-    <h6>Lorem ipsum dolor sit.</h6>
-<b>nimadur</b>
-    <!-- 
-    navbatda turish
-    git add .
-    git add --a
-    git add -A
- -->
+    <h1>Lorem, ipsum.</h1>
+    <h2>Lorem, ipsum dolor.</h2>
+
+   
 
 
 </body>
