--- a/git/index.html
+++ b/git/index.html
@@ -10,8 +10,8 @@
     <h1>Lorem, ipsum.</h1>
     <h2>Lorem, ipsum dolor.</h2>
 
-   
-
+   <input type="reset">
+<button>bo</button>
 
 </body>
 </html>
